      operation fails
    - Rename _mg_tie() to _magic_tie()
    - Rename _is_kid() to _is_child()
    - In IPC::SharedMem, removed leading underscore from object attributes
    - Parameter list in IPC::SharedMem::new() is now in the form of a hash
    - Code refactoring in IPC::SharedMem
    - Add POD for IPC::SharedMem

1.13    2022-10-11
    - In singleton(), do a check whether class was sent in. There was a shifting
      issue if called with IPC::Shareable::singleton() as opposed to
      IPC::Shareable->singleton()
    - When an exclusive collision occurs and both 'graceful' and 'warn' are set,
      the warning thrown now includes the segment/semaphore key in use. This
      makes it easier to clean things up with 'ipcrm'

1.12    2022-03-13
    - Add tests in t/07-new.t to test how using tied() against a dereferenced
      variable returned from new() allows access to the underlying
      IPC::Shareable object
    - Reworked how spawn() and unspawn() manage things internally
    - POD updates, fixes and clarifications
    - Removed spawn() and unspawn(). There's really no need for these as one
      can simply create but not destroy

1.11    2022-03-07
    - Fix certain tests so they don't throw if we bail early

1.10    2022-03-07
    - Fix issue where if segments were created underneath of a parent by an
      external process other than the process that created the parent, the
      global register wasn't being updated, therefore those segments weren't
      being removed when calling clean_up_all()
    - All test files now check number of segments before and after the entire
      script has run, verifying that all segments were cleaned up ok
    - The test suite itself in its entirety makes sure that all segments
      created during the suite run are cleaned up properly
    - Added CI_TESTING=1 to coverage CI tests

1.09    2022-03-06
    - Made 81-fork_dup_rand_keys.t developer only (but still need to figure out
      why it only fails on FreeBSD)
